dbaccess/source/core/dataaccess/ModelImpl.hxx
@@ -66,6 +66,7 @@
 #include <connectivity/CommonTools.hxx>
 #include <cppuhelper/propshlp.hxx>
 #include <cppuhelper/weakref.hxx>
+#include <vcl/svapp.hxx>
 #include <sfx2/docmacromode.hxx>
 #include <sfx2/docstoragemodifylistener.hxx>
 #include <unotools/sharedunocomponent.hxx>
@@ -569,9 +570,13 @@ private:
     Just put this guard onto the stack at the beginning of your method. Don't bother yourself
     with a MutexGuard, checks for being disposed, and the like.
 */
-class ModelMethodGuard : public ::osl::ResettableMutexGuard
+class ModelMethodGuard
 {
 private:
+    // to avoid deadlocks, lock SolarMutex too, and before the own osl::Mutex
+    SolarMutexResettableGuard m_SolarGuard;
+    ::osl::ResettableMutexGuard m_OslGuard;
+
     typedef ::osl::ResettableMutexGuard             BaseMutexGuard;
 
 public:
@@ -584,9 +589,22 @@ public:
             If the given component is already disposed
     */
     explicit ModelMethodGuard( const ModelDependentComponent& _component )
-        :BaseMutexGuard( _component.getMutex( ModelDependentComponent::GuardAccess() ) )
+        : m_OslGuard(_component.getMutex(ModelDependentComponent::GuardAccess()))
     {
         _component.checkDisposed();
+    }
+
+    void clear()
+    {
+        m_OslGuard.clear();
+        // note: this only releases *once* so may still be locked
+        m_SolarGuard.clear(); // SolarMutex last
+    }
+
+    void reset()
+    {
+        m_SolarGuard.reset(); // SolarMutex first
+        m_OslGuard.reset();
     }
 
     ~ModelMethodGuard()
